<resources>
    <string name="app_name">Story App</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="sublabel_register">Let\'s create account first</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_field_required">Required fields were not filled</string>
    <string name="error_field_empty">Your request cannot be processed</string>
    <string name="error_invalid_password">Make sure it\'s at least 8 characters</string>
    <string name="example_name">Rahman P</string>
    <string name="access_account">Access Account</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_title">Log In</string>
    <string name="logo_image">Image Logo</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="img_story">Image Story</string>
    <string name="story_add">Add Story</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="load_failed">Load Failed</string>
    <string name="title_activity_detail_story">Detail Story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="no_media_selected">No media selected</string>
    <string name="failed_to_open_camera">Failed to open camera</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="failed_upload_image">Failed upload image</string>
    <string name="add_image_story">Add Story Image</string>
    <string name="description">Description</string>
    <string name="camera_switch">Camera Switch</string>
    <string name="add_location">Add Location</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>